--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -15,17 +15,15 @@ steps:
     versionSpec: '3.6'
 
 - task: AzureCLI@2
-  displayName: 'Azure CLI'
   inputs:
-    azureSubscription: '$(SUBSCRIPTION_NAME)'
-    addSpnToEnvironment: true
-    scriptType: 'bash'
+    azureSubscription: 'rpacoe_staging'
+    scriptType: 'batch'
     scriptLocation: 'inlineScript'
     inlineScript: |
-      echo "##vso[task.setvariable variable=ARM_SUBSCRIPTION_ID]$(az account show --query="id" -o tsv)"
-      echo "##vso[task.setvariable variable=ARM_CLIENT_ID]${servicePrincipalId}"
-      echo "##vso[task.setvariable variable=ARM_CLIENT_SECRET]${servicePrincipalKey}"
-      echo "##vso[task.setvariable variable=ARM_TENANT_ID]${tenantId}"
+            echo "##vso[task.setvariable variable=ARM_SUBSCRIPTION_ID]$(az account show --query="id" -o tsv)"
+            echo "##vso[task.setvariable variable=ARM_CLIENT_ID]${servicePrincipalId}"
+            echo "##vso[task.setvariable variable=ARM_CLIENT_SECRET]${servicePrincipalKey}"
+            echo "##vso[task.setvariable variable=ARM_TENANT_ID]${tenantId}"
 
 - script: pip install ansible
   displayName: 'Install Ansible'
