Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -17,13 +17,10 @@ steps:
 - task: AzureCLI@2
   inputs:
     azureSubscription: 'rpacoe_staging'
-    scriptType: 'batch'
+    scriptType: 'bash'
     scriptLocation: 'inlineScript'
     inlineScript: |
-            echo "##vso[task.setvariable variable=ARM_SUBSCRIPTION_ID]$(az account show --query="id" -o tsv)"
-            echo "##vso[task.setvariable variable=ARM_CLIENT_ID]${servicePrincipalId}"
-            echo "##vso[task.setvariable variable=ARM_CLIENT_SECRET]${servicePrincipalKey}"
-            echo "##vso[task.setvariable variable=ARM_TENANT_ID]${tenantId}"
+            az account show --query="id" -o tsv
 
 - script: pip install ansible
   displayName: 'Install Ansible'
