--- a/site.yml
+++ b/site.yml
@@ -1,7 +1,7 @@
 ---
 
 - name: create, launch and configure our environment
-  hosts: localhost
+  hosts: bazeausrpan05
   connection: local
   gather_facts: true
 
